# c-cb

./: .gitignore  pyproject.toml
c_cb/: code_splitter.py  index.py  query.py  storage.py
